replace aria-role with role, fixes #2647
Closes #2647

Merge request studip/studip!1800

--- a/resources/assets/stylesheets/print.less
+++ b/resources/assets/stylesheets/print.less
@@ -42,7 +42,7 @@ body, input, textarea, td, th, blockquote, p, form, ul, h4 {
 #schedule_icons, #edit_inst_entry, #sidebar, #top-bar,
 .messagebox_buttons a.close, a.button, button.button,
 #sidebar, .helpbar-container, .helpbar,
-#skip_link_navigation, .skip_target, nav.action-menu,
+#skip_link_navigation, .skip_target, .action-menu,
 #site-title {
     display: none !important;
 }
