show navigation title on focus, fixes #2706
Closes #2706

Merge request studip/studip!1826

--- a/resources/assets/stylesheets/scss/navigation.scss
+++ b/resources/assets/stylesheets/scss/navigation.scss
@@ -102,6 +102,7 @@ body:not(.fixed) #navigation-level-1-items {
 
     // Recolor on hover and for active items
     li:hover,
+    li a:focus,
     li.active {
         .navtitle {
             opacity: 1;
