Refactor Blubber using vue, closes #1695
Closes #1695

Merge request studip/studip!1791

--- a/resources/assets/stylesheets/scss/blubber.scss
+++ b/resources/assets/stylesheets/scss/blubber.scss
@@ -286,6 +286,8 @@
         justify-content: space-around;
         align-items: center;
 
+        transition: all 0.5s ease-out;
+
         > textarea {
             border: 1px solid $content-color-40;
             background-color: $white;
