--- a/resources/assets/stylesheets/scss/dialog.scss
+++ b/resources/assets/stylesheets/scss/dialog.scss
@@ -287,7 +287,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: space-between;
-            margin: -$gap 0 0 -$gap;
+            margin: (-$gap) 0 0 (-$gap);
 
             .ui-button {
                 flex: 1;
