--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -3807,17 +3807,22 @@ g a l l e r y  b l o c k
     }
 }
 
-.cw-block-gallery-file-name {
-    color: $white;
+.cw-block-gallery-file-description {
+    width: -moz-available;
+    color: var(--white);
     font-size: 15px;
     padding: 8px 12px;
     position: absolute;
     bottom: 8px;
-    width: 100%;
     text-align: center;
-    span {
+    p {
+        display: -webkit-inline-box;
         background-color: fade-out($black, 0.6);
-        padding: 0.5em;
+        padding: 0 2em;
+        margin-bottom: 4px;
+        overflow: hidden;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
     }
 
     &.show-on-hover {
@@ -3830,7 +3835,7 @@ g a l l e r y  b l o c k
 }
 
 .cw-block-gallery-number-text {
-    color: $white;
+    color: var(--white);
     font-size: 12px;
     padding: 8px 12px;
     position: absolute;
@@ -3853,6 +3858,41 @@ g a l l e r y  b l o c k
 @keyframes fade {
     from {opacity: .4}
     to {opacity: 1}
+}
+
+
+.cw-block-gallery-grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    list-style: none;
+    padding: 0;
+    figure {
+        padding: 1px 4px;
+        margin: unset;
+        figcaption {
+            margin-bottom: 12px;
+
+            .cw-block-gallery-grid-file-name {
+                font-weight: 700;
+                margin-bottom: 4px;
+                overflow: hidden;
+                display: -webkit-box;
+                -webkit-line-clamp: 2;
+                -webkit-box-orient: vertical;
+            }
+            .cw-block-gallery-grid-file-description {
+                overflow: hidden;
+                display: -webkit-box;
+                -webkit-line-clamp: 5;
+                -webkit-box-orient: vertical;
+            }
+        }
+    }
+}
+.cw-container-wrapper-edit .cw-block-gallery-grid {
+    margin: 0;
 }
 
 /* * * * * * * * * * * * * * * * *
